EventServiceImpl: Add a constructor with an EventRepository parameter. EventServiceImplTest: change the setUp method; refactor plain mock to mock with mock annotation; rewrite the testGetEventsInSameDate test, and create testDeleteEvents and testDeleteEventsNullEvent tests.